<resources>
    <string name="app_name">Stack it!</string>
    <string name="credits">Made by Mourad Abouhcen\nFor counting mucho dinero\n %s %s %s </string>

    <string name="main_to_be_payed">To be paid</string>
    <string name="main_earned">Earned</string>

    <!--JobsActivity Strings-->
    <string name="title_activity_jobs">JobsActivity</string>
    <string name="jobs_title">Jobs</string>
    <string name="jobs_dialog_title">Add a new Job</string>
    <string name="jobs_dialog_subtitle_1">What is your new job called?</string>
    <string name="jobs_dialog_hint_1">Job title</string>
    <string name="jobs_dialog_subtitle_2">What is your hourly wage?</string>
    <string name="jobs_dialog_hint_2">Hourly wage</string>

    <!--ShiftsActivity Strings-->
    <string name="dialog_title">Add a new Shift</string>
    <string name="dialog_date">On what date did you work?</string>
    <string name="dialog_start_time">At what time did you start?</string>
    <string name="dialog_year">Year</string>
    <string name="dialog_month">Month</string>
    <string name="dialog_day">Day</string>
    <string name="dialog_hours">Hh</string>
    <string name="dialog_minutes">Mm</string>
    <string name="dialog_time_divide">:</string>
    <string name="dialog_date_divide">-</string>
    <string name="dialog_end_time">At what time did you end?</string>
    <string name="dialog_save_button">Add</string>
    <string name="dialog_next_button">Next</string>

    <string name="no_shifts">No Shifts saved\nfor this Job!</string>
    <string name="no_shifts_1">Add one by clicking the +\nin your lower right corner.</string>

    <string name="dialog_delete_title">Are you sure you want \nto delete this shift?</string>
    <string name="dialog_delete_agree">Yes</string>
    <string name="dialog_delete_no">No</string>

    <string name="dialog_update_title">Are you sure you want to \nset this shift to \"To Be Paid\"?</string>
    <string name="dialog_update_agree">Yes</string>
    <string name="dialog_update_no">No</string>

    <string name="error_empty_fields">Please fill in all the fields!</string>

    <string name="shift_total">Worked Hours</string>
    <string name="money">€ %.2f</string>
    <string name="euro_sign">€</string>
    <string name="hours">(%.2f hours)</string>

    <!--SettingsActivity Strings-->
    <string name="settings_title">Settings</string>
    <string name="settings_tab_general">General</string>
    <string name="settings_tab_danger_zone">Danger zone</string>
    <string name="settings_top_text_delete_job">Delete this Job?</string>
    <string name="settings_text_delete_job">Delete %s</string>
    <string name="settings_text_save_job">Apply changes!</string>

    <string name="dialog_delete_job_title">Are you sure you want to delete\nthe job \"%s\"\nand all its shifts?</string>
    <string name="dialog_delete_job_prompt">Please type \"%s\" to confirm</string>
    <string name="dialog_delete_job_btn">Delete this Job</string>
    <string name="dialog_cancel_delete_job_btn">Cancel</string>

    <!--FontAwesome5 Strings-->
    <!--remove from 'x' till ';' -->
    <string name="fa_slider">&#xf1de;</string>
    <string name="fa_back">&#xf053;</string>
    <string name="fa_close">&#xf00d;</string>
    <string name="fa_question_mark">&#xf059;</string>
    <string name="fa_edit">&#xf044;</string>
    <string name="fa_exclamation_mark">&#xf071;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
