<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_color_white_rounded"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDialogDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/helvetica_neue_med"
            android:text="@string/dialog_delete_job_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView26" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_custom_rounded"
            android:drawableRight="@drawable/logo_cancel_drawable"
            android:fontFamily="@font/helvetica_neue_med"
            android:paddingStart="15dp"
            android:paddingEnd="3dp"
            android:text="@string/dialog_cancel_delete_job_btn"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnDelete"
            app:layout_constraintTop_toTopOf="@+id/btnDelete" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_custom_anisa_rounded"
            android:drawableRight="@drawable/logo_delete_drawable"
            android:enabled="false"
            android:fontFamily="@font/helvetica_neue_med"
            android:paddingStart="18dp"
            android:paddingEnd="3dp"
            android:text="@string/dialog_delete_job_btn"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPrompt" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/font_awesome"
            android:text="@string/fa_exclamation_mark"
            android:textColor="@color/buttonCancelPressedPrimary"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tvQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helvetica_neue_med"
            android:text="@string/dialog_delete_job_prompt"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPrompt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/helvetica_neue_med"
            android:hint="hint"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPrompt" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>