<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle_color_white_rounded"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clDialogDelete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/dialog_delete_title"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/button_custom_grey_rounded"
            android:drawableRight="@drawable/logo_cancel_drawable"
            android:fontFamily="@font/roboto_light"
            android:paddingEnd="5dp"
            android:text="@string/dialog_delete_no"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAgree"
            app:layout_constraintTop_toTopOf="@+id/btnDelete" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_custom_anissa_rounded"
            android:drawableRight="@drawable/logo_delete_drawable"
            android:fontFamily="@font/roboto_light"
            android:paddingEnd="5dp"
            android:text="@string/dialog_delete_agree"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnCancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>